# TILKE

./: .gitignore  LICENSE  README.md  citation.cff  pyproject.toml  requirements.txt  setup.py  tutorial.ipynb
docs/superpowers/plans/: 2026-04-15-tilke-cleanup.md
docs/superpowers/specs/: 2026-04-15-tilke-cleanup-design.md  2026-04-15-tilke-phase2-design.md
media/: generate.py
src/tilke/: __init__.py  circuit.py  curve_generator.py  data_utils.py  image_utils.py  perlin.py  spline.py
tests/: test_circuit.py  test_perlin.py  test_spline.py
tilke/: Circuit.py  CurveGenerator.py  Spline.py  TILKE_generation_20-05-2023_02-09-14-614073.csv  __init__.py  data_utils.py  image_utils.py
trackLimits/: .gitignore  DataLoader.ipynb  includeMidPointsPublisher.ipynb  tilkeToIteration.ipynb
trackLimits/database_RNNbasedTLs_v2/cones/: cones_circuit_TILKE_1.csv  cones_circuit_TILKE_10.csv  cones_circuit_TILKE_100.csv  cones_circuit_TILKE_11.csv  cones_circuit_TILKE_12.csv  cones_circuit_TILKE_13.csv  cones_circuit_TILKE_14.csv  cones_circuit_TILKE_15.csv  cones_circuit_TILKE_16.csv  cones_circuit_TILKE_17.csv  cones_circuit_TILKE_18.csv  cones_circuit_TILKE_19.csv  cones_circuit_TILKE_2.csv  cones_circuit_TILKE_20.csv  cones_circuit_TILKE_21.csv  cones_circuit_TILKE_22.csv  cones_circuit_TILKE_23.csv  cones_circuit_TILKE_24.csv  cones_circuit_TILKE_25.csv  cones_circuit_TILKE_26.csv  cones_circuit_TILKE_27.csv  cones_circuit_TILKE_28.csv  cones_circuit_TILKE_29.csv  cones_circuit_TILKE_3.csv  cones_circuit_TILKE_30.csv  cones_circuit_TILKE_31.csv  cones_circuit_TILKE_32.csv  (+73 more)
(+300 files in other folders)
