[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tilke"
version = "0.2.0"
description = "Generate randomized Formula-style racing circuits"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Pol Puigdemont Plana" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "Pillow>=10.0",
    "noise>=1.2",
    "imageio>=2.33",
    "tqdm>=4.66",
]

[project.urls]
Repository = "https://github.com/puigde/tilke"

[tool.hatch.build.targets.wheel]
packages = ["src/tilke"]

[dependency-groups]
dev = ["ruff>=0.11", "ty>=0.0.1a7", "pytest>=8.0"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
